Vertex masking toggle not available in vertex paint UI, but shown in that of weight paint #60256

Closed
opened 2019-01-07 06:58:06 +01:00 by Andrew Palmer · 7 comments

System Information
Operating system: Windows 10
Graphics card: Intel

Blender Version
Broken: 2.80 January 7th build
(example: 2.79b release)
(example: 2.80, edbf15d3c0, blender2.8, 2018-11-28, as found on the splash screen)
Worked: 2.79 January 7th build

Short description of error
In Blender 2.79 master the vertex paint tools received a few improvements, one of which was the ability to mask vertices, instead of just faces when painting. This feature exists and works in 2.80, but does not appear in the header UI of the vertex paint mode, and is only visible in weight paint. The feature can be enabled in weight paint, and still works if the user switches to vertex paint, so it seems like a simple UI omission. The feature is definitely valuable in both modes.

Exact steps for others to reproduce the error

  1. Open empty scene (assuming it contains a cube)
  2. Switch to weight paint mode. Notice there are two masking toggle buttons next to the mode selection dropdown for face and vertex masking. Enable vertex masking.
  3. Switch to vertex paint. Notice the vertex masking button has gone.
  4. Select a single vertex of the cube and try painting a non-selected vertex. Notice that only the selected vertex can be painted. The feature works, but the UI toggle button is missing.
**System Information** Operating system: Windows 10 Graphics card: Intel **Blender Version** Broken: 2.80 January 7th build (example: 2.79b release) (example: 2.80, edbf15d3c044, blender2.8, 2018-11-28, as found on the splash screen) Worked: 2.79 January 7th build **Short description of error** In Blender 2.79 master the vertex paint tools received a few improvements, one of which was the ability to mask vertices, instead of just faces when painting. This feature exists and works in 2.80, but does not appear in the header UI of the vertex paint mode, and is only visible in weight paint. The feature can be enabled in weight paint, and still works if the user switches to vertex paint, so it seems like a simple UI omission. The feature is definitely valuable in both modes. **Exact steps for others to reproduce the error** 1. Open empty scene (assuming it contains a cube) 2. Switch to weight paint mode. Notice there are two masking toggle buttons next to the mode selection dropdown for face and vertex masking. Enable vertex masking. 3. Switch to vertex paint. Notice the vertex masking button has gone. 4. Select a single vertex of the cube and try painting a non-selected vertex. Notice that only the selected vertex can be painted. The feature works, but the UI toggle button is missing.
Author

Added subscriber: @AndrewPalmer

Added subscriber: @AndrewPalmer
Member

Added subscriber: @lichtwerk

Added subscriber: @lichtwerk
Philipp Oeser self-assigned this 2019-01-07 10:00:23 +01:00
Member

Confirmed, checking...

Confirmed, checking...
Member

While the painting feature works, the selection of vertices for masking doesnt work in vertex paint (it only does in weight paint)
Button was specifically removed in e8e812fb1d.

Will have a quick look if supporting the vertex selection masking in vertex paint is easy to be added, otherwise this might be a known limitation...

While the painting feature works, the selection of vertices for masking doesnt work in vertex paint (it only does in weight paint) Button was specifically removed in e8e812fb1d. Will have a quick look if supporting the vertex selection masking in vertex paint is easy to be added, otherwise this might be a known limitation...
Member

This was mostly missing drawing, I guess D4177 fixes this (I am unaware of other things that prevent this from working...)

This was mostly missing drawing, I guess [D4177](https://archive.blender.org/developer/D4177) fixes this (I am unaware of other things that prevent this from working...)

This issue was referenced by a0d456daf8

This issue was referenced by a0d456daf80013853743e55602d437a6ee8f21d8

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#60256
No description provided.