Vertex Paint: support vertex masking

Working in 2.7x, was just disabled in 2.8x.

Fixes T60256